--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -247,7 +247,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <script src="_framework/blazor.server.js" @* autostart="false" *@ ></script>
+    <script src="_framework/blazor.server.js" autostart="false"></script>
 
     <script>
         // Blazor.start().then(() => {
@@ -257,6 +257,13 @@
         //         }
         //     }
         // });
+
+         Blazor.start({
+            reconnectionHandler: {
+              onConnectionDown: (options, error) => console.error(error),
+              onConnectionUp: () => console.log("Up, up, and away!")
+            }
+      });
     </script>
 
     <div id="components-reconnect-modal" style="display: none"/>
