--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -111,6 +111,14 @@
 								}
 							</div>
 						}
+						else
+						{
+							<label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
+						}
+					}
+					else
+					{
+						<label style="margin-top: 20px; margin-left: 10px;">No hay resultados</label>
 					}
 				</div>
 			</div>
