--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -44,43 +44,54 @@
 
 		<div style="margin-top: 20px;">
 			Turno: @LeerOrden()
-		</div>	
+		</div>
+
+		<div class="perfil-flexible-centrado" style="margin-top: 20px;">
+			<div style="width: 25%;">
+				<button @onclick="@(e => ClickearPortada(e))" class="boton-pequeño" style="text-align: center;">Actualizar Portada</button>
+			</div>
+		</div>
 	</div>
 }
 
 @code {
 
-	#nullable disable
+    #nullable disable
 
-	private string tiendaElegida = null;
+    private string tiendaElegida = null;
 
-	private void ClickearTienda(MouseEventArgs e, string id)
-	{
-		tiendaElegida = id;
+    private void ClickearTienda(MouseEventArgs e, string id)
+    {
+        tiendaElegida = id;
 
-		if (id != null)
-		{
-			TiendasCargar.AdminTiendas(id);
+        if (id != null)
+        {
+            TiendasCargar.AdminTiendas(id);
 
-			if (id == "divisas")
-			{
-				Herramientas.Divisas.CogerDatos();
-			}
+            if (id == "divisas")
+            {
+                Herramientas.Divisas.CogerDatos();
+            }
 
-			if (id == "limpiar")
-			{
-				//BaseDatos.Juegos.Precios.Limpiar(tienda);
-			}
+            if (id == "limpiar")
+            {
+                //BaseDatos.Juegos.Precios.Limpiar(tienda);
+            }
 
-			if (id == "codigos")
-			{
-				// Herramientas.Buscador.ActualizarCodigos();
-			}
-		}
-	}
+            if (id == "codigos")
+            {
+                // Herramientas.Buscador.ActualizarCodigos();
+            }
+        }
+    }
 
-	private string LeerOrden()
-	{
-		return BaseDatos.Tiendas.Admin.TareaLeerOrden().ToString();
+    private string LeerOrden()
+    {
+        return BaseDatos.Tiendas.Admin.TareaLeerOrden().ToString();
+    }
+
+    private async Task ClickearPortada(MouseEventArgs e)
+    {
+		await Herramientas.Tareas.PortadaTarea2();
 	}
 }
