--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -538,12 +538,12 @@
 							<div class="juego-galeria-contenedor">
 								@if (mediaMostrarPosicion == 99999)
 								{
-									<video src="@mediaMostrar" controls autoplay="autoplay" loop muted="yes" poster="@juego.Imagenes.Header_460x215" preload="none" style="width: 854px; height: 480px; object-fit: cover;" />
+									<video src="@mediaMostrar" controls autoplay="autoplay" loop muted poster="@juego.Imagenes.Header_460x215" preload="none" style="width: 854px; height: 480px; object-fit: cover;" />
 								}
 								else
 								{
 									<div>
-										<div class="juego-galeria-numero">@(mediaMostrarPosicion + 1) / @juego.Media.Capturas.Count</div>
+										<div class="juego-galeria-numero">@(mediaMostrarPosicion + 1) / @(juego.Media.Capturas.Count)</div>
 										<img src="@Imagenes.DescargarYGuardar(mediaMostrar, "juegos", juego.Id.ToString(), "captura" + mediaMostrarPosicion.ToString(), dominio).Result" style="width: 100%;">
 									</div>
 
@@ -604,14 +604,30 @@
 						{
 							@if (juego.Caracteristicas.Desarrolladores.Count > 0)
 							{
-								<div>@Idiomas.CogerCadena(idioma, "Game.String35")</div>
-								<ul>
-									@foreach (var desarrollador in juego.Caracteristicas.Desarrolladores)
-									{
-										<li>@desarrollador</li>
-									}
-								</ul>
+								<div>
+									@{
+										List<string> listaDesarrolladores = new List<string>();
 
+										foreach (var desarrollador in juego.Caracteristicas.Desarrolladores)
+										{
+											if (string.IsNullOrEmpty(desarrollador) == false)
+											{
+												listaDesarrolladores.Add(desarrollador);
+											}
+										}
+
+										if (listaDesarrolladores.Count > 0)
+										{
+											<div>@Idiomas.CogerCadena(idioma, "Game.String35")</div>
+											<ul>
+												@foreach (var desarrollador in listaDesarrolladores)
+												{
+													<li>@desarrollador</li>
+												}
+											</ul>
+										}
+									}
+								</div>
 							}
 						}
 
@@ -619,13 +635,30 @@
 						{
 							@if (juego.Caracteristicas.Publishers.Count > 0)
 							{
-								<div>@Idiomas.CogerCadena(idioma, "Game.String36")</div>
-								<ul>
-									@foreach (var publisher in juego.Caracteristicas.Publishers)
-									{
-										<li>@publisher</li>
+								<div>
+									@{
+										List<string> listaPublishers = new List<string>();
+
+										foreach (var publisher in juego.Caracteristicas.Publishers)
+										{
+											if (string.IsNullOrEmpty(publisher) == false)
+											{
+												listaPublishers.Add(publisher);
+											}
+										}
+
+										if (listaPublishers.Count > 0)
+										{
+											<div>@Idiomas.CogerCadena(idioma, "Game.String36")</div>
+											<ul>
+												@foreach (var publisher in listaPublishers)
+												{
+													<li>@publisher</li>
+												}
+											</ul>
+										}
 									}
-								</ul>
+								</div>
 							}
 						}
 					}
@@ -1274,17 +1307,17 @@
 
 	public string BundlesPreparar(JuegoDRM drm, string idioma)
 	{
-		@if (BundlesDisponibles(juego.Bundles, drm) != null)
+		if (BundlesDisponibles(juego.Bundles, drm) != null)
 		{
-			@if (BundlesDisponibles(juego.Bundles, drm).Count > 0)
+			if (BundlesDisponibles(juego.Bundles, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String20");
 			}
 		}
 
-		@if (BundlesAntiguos(juego.Bundles, drm) != null)
+		if (BundlesAntiguos(juego.Bundles, drm) != null)
 		{
-			@if (BundlesAntiguos(juego.Bundles, drm).Count > 0)
+			if (BundlesAntiguos(juego.Bundles, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String21");
 			}
@@ -1411,17 +1444,17 @@
 
 	public string GratisPreparar(JuegoDRM drm, string idioma)
 	{
-		@if (GratisDisponibles(juego.Gratis, drm) != null)
+		if (GratisDisponibles(juego.Gratis, drm) != null)
 		{
-			@if (GratisDisponibles(juego.Gratis, drm).Count > 0)
+			if (GratisDisponibles(juego.Gratis, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String28");
 			}
 		}
 
-		@if (GratisAntiguos(juego.Gratis, drm) != null)
+		if (GratisAntiguos(juego.Gratis, drm) != null)
 		{
-			@if (GratisAntiguos(juego.Gratis, drm).Count > 0)
+			if (GratisAntiguos(juego.Gratis, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String29");
 			}
@@ -1517,17 +1550,17 @@
 
 	public string SuscripcionesPreparar(JuegoDRM drm, string idioma)
 	{
-		@if (SuscripcionesDisponibles(juego.Suscripciones, drm) != null)
+		if (SuscripcionesDisponibles(juego.Suscripciones, drm) != null)
 		{
-			@if (SuscripcionesDisponibles(juego.Suscripciones, drm).Count > 0)
+			if (SuscripcionesDisponibles(juego.Suscripciones, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String24");
 			}
 		}
 
-		@if (SuscripcionesAntiguos(juego.Suscripciones, drm) != null)
+		if (SuscripcionesAntiguos(juego.Suscripciones, drm) != null)
 		{
-			@if (SuscripcionesAntiguos(juego.Suscripciones, drm).Count > 0)
+			if (SuscripcionesAntiguos(juego.Suscripciones, drm).Count > 0)
 			{
 				return Idiomas.CogerCadena(idioma, "Game.String25");
 			}
@@ -1607,6 +1640,15 @@
 
 	private void CambiarMediaMostrar(MouseEventArgs e, int nuevaCaptura)
 	{
+		if (nuevaCaptura < 0)
+		{
+			nuevaCaptura = juego.Media.Capturas.Count - 1;
+		}
+		else if (nuevaCaptura >= juego.Media.Capturas.Count)
+		{
+			nuevaCaptura = 0;
+		}
+
 		mediaMostrarPosicion = nuevaCaptura;
 
 		if (nuevaCaptura == 99999)
