--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -137,17 +137,21 @@
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>                       
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/bundles">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Bundles">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Bundles")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/free">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Free">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Free")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/subscriptions">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Subscriptions">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Subscriptions")
                         </a>
                         <hr>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/lastnews">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Giveaways">
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Giveaways")
+                        </a>
+                        <hr>
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/LastNews">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastNews")
                         </a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">
