--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -28,7 +28,7 @@
 					@if (juego.Tipo == suscripcion.Id)
 					{
 						<div>
-                            <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño tooltip2" style="padding: 0px;" target="_blank">
+                            <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño tooltip2" style="padding: 0px; position: static;" target="_blank">
 								<div>
 									<img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
 								</div>
